--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "dist/main.bundle.js",
     "author": "jockep",
     "license": "MIT",
-    "bin": "dist/main.bundle.js",
+    "bin": "bin/main.bundle.js",
     "devDependencies": {
         "@types/node": "^18.11.18",
         "esbuild": "^0.17.5",
@@ -18,6 +18,6 @@
         "chalk": "4.1.2"
     },
     "scripts": {
-        "build": "esbuild src/main.ts --bundle --outfile=dist/main.bundle.js --platform=node"
+        "build": "esbuild src/main.ts --bundle --outfile=bin/main.bundle.js --platform=node"
     }
 }
